Front a realizar Registos e autenticação

--- a/src/web/LoginSystem.Web.MVC/Views/Home/Index.cshtml
+++ b/src/web/LoginSystem.Web.MVC/Views/Home/Index.cshtml
@@ -9,6 +9,6 @@
 
     <div class="botoes">
         <a asp-action="Registo" asp-controller="Autenticacao">Registo</a>
-        <a asp-action="Registo" asp-controller="Autenticacao">Login</a>
+        <a asp-action="Login" asp-controller="Autenticacao">Login</a>
     </div>
 </div>
