--- a/src/web/LoginSystem.Web.MVC/Views/Autenticacao/Login.cshtml
+++ b/src/web/LoginSystem.Web.MVC/Views/Autenticacao/Login.cshtml
@@ -1,4 +1,6 @@
-﻿@{
+﻿@model UtilizadorLogin
+
+@{
     ViewData["Title"] = "Login System";
 }
 
@@ -6,18 +8,20 @@
     <a asp-action="Index" asp-controller="Home"><span class="material-symbols-rounded">house</span></a>
 </div>
 
+<vc:summary></vc:summary>
+
 <div class="box">
-    <div class="form">
+    <form method="post" asp-route-returnUrl="@ViewData["ReturnUrl"]" class="form">
         <h2>Login</h2>
 
         <div class="inputBox">
-            <input type="text" required="required">
+            <input type="text" required="required" asp-for="Email">
             <span>E-mail</span>
             <i></i>
         </div>
 
         <div class="inputBox">
-            <input type="password" required="required">
+            <input type="password" required="required" asp-for="Password">
             <span>Password</span>
             <i></i>
         </div>
@@ -32,5 +36,5 @@
         </div>
 
 
-    </div>
+    </form>
 </div>
