--- a/src/web/LoginSystem.Web.MVC/Views/Autenticacao/Registo.cshtml
+++ b/src/web/LoginSystem.Web.MVC/Views/Autenticacao/Registo.cshtml
@@ -1,35 +1,39 @@
-﻿@{
+﻿@model LoginSystem.Web.MVC.Models.UtilizadorRegisto
+
+@{
     ViewData["Title"] = "Login System";
 }
 
 <div class="icon-home">
-    <a asp-action="Index" asp-controller="Home"><span class="material-symbols-rounded">house</span></a>
+    <a href="index.html"><span class="material-symbols-rounded">house</span></a>
 </div>
 
+<vc:summary></vc:summary>
+
 <div class="box-registo">
-    <div class="form">
+    <form method="post" class="form">
         <h2>Registo</h2>
 
-        <div class="inputBox">
-            <input type="text" required="required">
+      @*  <div class="inputBox">
+            <input type="text">
             <span>Nome</span>
             <i></i>
-        </div>
+        </div>*@
 
         <div class="inputBox">
-            <input type="text" required="required">
+            <input type="text" required="required" asp-for="Email">
             <span>E-mail</span>
             <i></i>
         </div>
 
         <div class="inputBox">
-            <input type="password" required="required">
+            <input type="password" required="required" asp-for="Password">
             <span>Password</span>
             <i></i>
         </div>
 
         <div class="inputBox">
-            <input type="password" required="required">
+            <input type="password" required="required" asp-for="PasswordConfirmacao">
             <span>Confirmação Password</span>
             <i></i>
         </div>
@@ -39,5 +43,5 @@
         </div>
 
 
-    </div>
+    </form>
 </div>
