--- a/src/web/LoginSystem.Web.MVC/Views/Shared/_Layout.cshtml
+++ b/src/web/LoginSystem.Web.MVC/Views/Shared/_Layout.cshtml
@@ -5,12 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"]</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@48,400,1,0" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
     <link rel="stylesheet" href="~/css/login.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/css/global.css" asp-append-version="true" />
+    <link rel="stylesheet" href="~/css/dados.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/LoginSystem.Web.MVC.styles.css" asp-append-version="true" />
 </head>
 <body>
    
+
+    <partial name="_LoginPartial" />
 
     <div>
         <main role="main" class="pb-3">
