--- a/src/web/LoginSystem.Web.MVC/Views/Autenticacao/Registo.cshtml
+++ b/src/web/LoginSystem.Web.MVC/Views/Autenticacao/Registo.cshtml
@@ -14,11 +14,17 @@
     <form method="post" class="form">
         <h2>Registo</h2>
 
-      @*  <div class="inputBox">
-            <input type="text">
+        <div class="inputBox">
+            <input type="text" required="required" asp-for="Nome">
             <span>Nome</span>
             <i></i>
-        </div>*@
+        </div>
+
+        <div class="inputBox">
+            <input type="text" required="required" asp-for="NIF">
+            <span>NIF</span>
+            <i></i>
+        </div>
 
         <div class="inputBox">
             <input type="text" required="required" asp-for="Email">
